# vuln-variants

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  REPORT.md  analyze_references.py  build_chains.py  build_reference_index.py  classify_variants_t5.py  count_evidence_coverage.py  export_commits.py  find_shared_ids_t4.py  find_variant_phrases_t6.py  github_commit_utils.py  ground_truth.json  main.py  parse_commits_t3.py  parse_cves.py  parse_cves_t2.py  pyproject.toml  sample_edges.py  test_pipeline.py  url_utils.py  validate.py
datasets/: edge_classifications.json  edge_samples.json  edge_taxonomy_report.md  edges_t5_llm.json  t5_classifications.jsonl
datasets/releases/2026-04-04/: manifest.json
datasets/releases/2026-04-10/: manifest.json
datasets/releases/2026-04-11/: manifest.json
output/: edges_t3_commits.json
test_fixtures/: CVE-2010-1622.json  CVE-2021-44228.json  CVE-2021-45046.json  CVE-2021-45105.json  CVE-2022-22965.json  CVE-2023-44487.json
