[project]
name = "vuln-variants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openai>=1.0.0",
    "pytest>=9.0.2",
    "requests>=2.32.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["."]
